--- a/Index.html
+++ b/Index.html
@@ -15,10 +15,10 @@
 <h1 id = "test"> Kortez's Brinson Portfolio </h1>
 
 <nav>
-<a href="Kortez-Brinson-website.html" class= "active"> Home</a>
-<a href= ""> About Me </a>
+<a href="Index.html" class= "active"> Home</a>
+<a href= "about.html" class= "active"> About me </a>
 
-<a href= "" target="_blank"> Contact Me</a>
+<a href= "contact.html" class= "active"> Contact Me</a>
 
 </nav>
 </header>
@@ -33,13 +33,14 @@
 
 <p> Feel free to contact Kortez on the contact me page for any inquiries as far a advice for designs and rates. </p>
 
-
-
 </section>
 
-<aside class = "left"> 
-<img src="http://buckybrinson.byethost3.com/8C9A0167.jpg">
-
+<aside class = right > 
+    <video width="320" height="240" controls>
+        <source src="Video1.mp4" type="video/mp4">
+        <source src="Video1.mp4" type="video/ogg">
+      Your browser does not support the video tag.
+      </video>
 </aside>
 
 <footer>
