--- a/Index.html
+++ b/Index.html
@@ -5,46 +5,70 @@
 <head>
 
 <meta charset="utf-8">
-<title> Kortez Brinson </title>
+<title> Tez's Hub </title>
 
 <link rel="stylesheet" href="stylesheet2.css">
 </head>
 <body>
 
 <header>
-<h1 id = "test"> Kortez's Brinson Portfolio </h1>
+<h1 id = "Title"> Tez's Hub</h1>
 
 <nav>
-<a href="Index.html" class= "active"> Home</a>
-<a href= "about.html" class= "active"> About me </a>
-
+<a href="Index.html" class= "active"> Homepage</a>
+<a href= "about.html" class= "active"> About Me</a>
 <a href= "contact.html" class= "active"> Contact Me</a>
-
 </nav>
 </header>
-<main>
 
-<section class = "right">
 <h2> A Front End Designer For Fun </h2>
+    <div class="column">
 
-<p> Kortez Brinson is a recenty graduate from te University of Michigan. He has a interest in tech sales and web development. In Kortez's freetime, he like to play video games and baking thing such as brownies.</p>
+<p class = "left"> Kortez Brinson is a recent graduate from te University of Michigan. He has an interest in video games and animation.</p>
 
-<p> After Graduation from the university of Michigan, Kortez deciede he wanted to design website in his freetime. This website is where some of his projects and designs lay. </p>
+<p class = "left"> After graduation from the University of Michigan, Kortez decided he wanted to design websites in his freetime. This website is where some of his projects and designs are located. </p>
 
-<p> Feel free to contact Kortez on the contact me page for any inquiries as far a advice for designs and rates. </p>
+<p class = "left"> Feel free to contact Kortez on the contact me page for any inquiries as far a advice for designs and rates. </p>
 
-</section>
+</div>
 
-<aside class = right > 
+<div class = "right" > 
+    <h2> My Videos </h2>
     <video width="320" height="240" controls>
         <source src="Video1.mp4" type="video/mp4">
         <source src="Video1.mp4" type="video/ogg">
       Your browser does not support the video tag.
       </video>
-</aside>
+
+      <video width="320" height="240" controls>
+        <source src="Video2.mp4" type="video/mp4">
+        <source src="Video2.mp4" type="video/ogg">
+      Your browser does not support the video tag.
+      </video>
+
+      <video width="320" height="240" controls>
+        <source src="video3.mp4" type="video/mp4">
+        <source src="video3.mp4" type="video/ogg">
+      Your browser does not support the video tag.
+      </video>
+
+      <video width="320" height="240" controls>
+        <source src="video4.mp4" type="video/mp4">
+        <source src="video4.mp4" type="video/ogg">
+      Your browser does not support the video tag.
+      </video>
+
+      <video width="320" height="240" controls>
+        <source src="video5.mp4" type="video/mp4">
+        <source src="video5.mp4" type="video/ogg">
+      Your browser does not support the video tag.
+      </video>
+
+      
+
+</div>
 
 <footer>
 
 </footer>
-</main>
 </body>
