updates almost finished

--- a/Index.html
+++ b/Index.html
@@ -32,8 +32,9 @@
 
 </div>
 
-<div class = "right" > 
+<div class = "column" > 
     <h2> My Videos </h2>
+
     <video width="320" height="240" controls>
         <source src="Video1.mp4" type="video/mp4">
         <source src="Video1.mp4" type="video/ogg">
@@ -64,11 +65,11 @@
       Your browser does not support the video tag.
       </video>
 
-      
-
 </div>
 
-<footer>
-
+<footer> 
+<p> Thank you for taking the time to visit my website. If you would like more information regarding me and want to follow m on social media 
+    please feel free to check out my about me and contact me page. Thank you!
+</p>
 </footer>
 </body>
