--- a/about.html
+++ b/about.html
@@ -23,7 +23,8 @@
         </nav>
     </header>
     <h2> A Front End Designer For Fun </h2>
-    <div class="column">
+    <div class>
+        <img src="Attachment.JPG" alt="Photo of Kortez">
 
 <p class = "left"> Kortez Brinson is a recent graduate from te University of Michigan. He has an interest in video games and animation.</p>
 
@@ -31,14 +32,6 @@
 
 <p class = "left"> Feel free to contact Kortez on the contact me page for any inquiries as far a advice for designs and rates. </p>
 
-</div>
-
-<div class = "right" > 
-    <video width="320" height="240" controls>
-        <source src="Video1.mp4" type="video/mp4">
-        <source src="Video1.mp4" type="video/ogg">
-      Your browser does not support the video tag.
-      </video>
 </div>
 
 <footer>
