--- a/Index.html
+++ b/Index.html
@@ -21,55 +21,55 @@
 </nav>
 </header>
 
-<h2> A Front End Designer For Fun </h2>
-    <div class="column">
+<h2> We are all on a journey trying to grow and learn something new. Please take this time to enjoy some videos
+    I found that bring me peace and some video that I create from a tough but enjoyable time in my life. 
+</h2>
+    <div class=>
 
-<p class = "left"> Kortez Brinson is a recent graduate from te University of Michigan. He has an interest in video games and animation.</p>
-
-<p class = "left"> After graduation from the University of Michigan, Kortez decided he wanted to design websites in his freetime. This website is where some of his projects and designs are located. </p>
-
-<p class = "left"> Feel free to contact Kortez on the contact me page for any inquiries as far a advice for designs and rates. </p>
 
 </div>
 
 <div class = "column" > 
     <h2> My Videos </h2>
-
-    <video width="320" height="240" controls>
-        <source src="Video1.mp4" type="video/mp4">
-        <source src="Video1.mp4" type="video/ogg">
-      Your browser does not support the video tag.
-      </video>
-
-      <video width="320" height="240" controls>
-        <source src="Video2.mp4" type="video/mp4">
-        <source src="Video2.mp4" type="video/ogg">
-      Your browser does not support the video tag.
-      </video>
-
-      <video width="320" height="240" controls>
-        <source src="video3.mp4" type="video/mp4">
-        <source src="video3.mp4" type="video/ogg">
-      Your browser does not support the video tag.
-      </video>
-
-      <video width="320" height="240" controls>
-        <source src="video4.mp4" type="video/mp4">
-        <source src="video4.mp4" type="video/ogg">
-      Your browser does not support the video tag.
-      </video>
-
-      <video width="320" height="240" controls>
-        <source src="video5.mp4" type="video/mp4">
-        <source src="video5.mp4" type="video/ogg">
-      Your browser does not support the video tag.
-      </video>
+    <ul>
+        <li><video width="320" height="240" controls>
+            <source src="Video1.mp4" type="video/mp4">
+            <source src="Video1.mp4" type="video/ogg">
+          Your browser does not support the video tag.
+          </video></li>
+        <li><video width="320" height="240" controls>
+            <source src="Video2.mp4" type="video/mp4">
+            <source src="Video2.mp4" type="video/ogg">
+          Your browser does not support the video tag.
+          </video></li>
+        <li><video width="320" height="240" controls>
+            <source src="video3.mp4" type="video/mp4">
+            <source src="video3.mp4" type="video/ogg">
+          Your browser does not support the video tag.
+          </video></li>
+          <li><video width="320" height="240" controls>
+            <source src="video4.mp4" type="video/mp4">
+            <source src="video4.mp4" type="video/ogg">
+          Your browser does not support the video tag.
+          </video></li>
+          <li><video width="320" height="240" controls>
+            <source src="video5.mp4" type="video/mp4">
+            <source src="video5.mp4" type="video/ogg">
+          Your browser does not support the video tag.
+          </video></li>
+      </ul>
 
 </div>
 
+
+</body>
 <footer> 
 <p> Thank you for taking the time to visit my website. If you would like more information regarding me and want to follow m on social media 
     please feel free to check out my about me and contact me page. Thank you!
 </p>
+<nav>
+    <a href="Index.html" class= "active"> Homepage</a>
+    <a href= "about.html" class= "active"> About Me</a>
+    <a href= "contact.html" class= "active"> Contact Me</a>
+    </nav>
 </footer>
-</body>
