--- a/about.html
+++ b/about.html
@@ -22,19 +22,29 @@
         
         </nav>
     </header>
-    <h2> A Front End Designer For Fun </h2>
+    <h2> About Kortez </h2>
+    <div> <img src="Attachment.JPG" alt="Photo of Kortez"></div>
+   
     <div class>
-        <img src="Attachment.JPG" alt="Photo of Kortez">
-
+        
+    </p>
 <p class = "left"> Kortez Brinson is a recent graduate from te University of Michigan. He has an interest in video games and animation.</p>
 
 <p class = "left"> After graduation from the University of Michigan, Kortez decided he wanted to design websites in his freetime. This website is where some of his projects and designs are located. </p>
 
-<p class = "left"> Feel free to contact Kortez on the contact me page for any inquiries as far a advice for designs and rates. </p>
+<p class = "left"> Animation was something that has help me learn many lessons in life. When I think of my childhood I often think about a show called "Teen Titans" This show taught me a lot about moralilty and 
+    why making the right decison and left and that is still something I practice today. 
+
 
 </div>
-
-<footer>
-
-</footer>
 </body>
+<footer> 
+    <p> Thank you for taking the time to visit my website. If you would like more information regarding me and want to follow m on social media 
+        please feel free to check out my about me and contact me page. Thank you!
+    </p>
+    <nav>
+        <a href="Index.html" class= "active"> Homepage</a>
+        <a href= "about.html" class= "active"> About Me</a>
+        <a href= "contact.html" class= "active"> Contact Me</a>
+        </nav>
+    </footer>
